@@ -1,5 +1,5 @@
 # Simple example programs
-check_PROGRAMS = photographer thumbnail
+check_PROGRAMS = photographer thumbnail write-exif
 
 # Example programs with dependencies other than plain libexif
 COMPLICATED_EXAMPLES = cam_features.c
